[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 32.1796, 32.4527 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 296.296, 314.537 )
scale = Vector2( 0.7, 0.7 )
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="BulletSpawnLocation" type="Node2D" parent="."]
position = Vector2( 32, 0 )

[node name="RayCast_Floor_Right" type="RayCast2D" parent="."]
position = Vector2( 31, 0 )
enabled = true
cast_to = Vector2( 0, 33 )
collision_mask = 6

[node name="RayCast_Floor_Left" type="RayCast2D" parent="."]
position = Vector2( -31, 0 )
enabled = true
cast_to = Vector2( 0, 33 )
collision_mask = 6

